[tool.poetry]
name = "astar-py"
version = "0.1.0"
description = "A* pathfinding algorithm in Python"
authors = ["Gabor Bota <gab.bota@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
